<resources>
    <string name="app_name">app game</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome!</string>
    <string name="text">With our app it will be much easier and more fun to keep track of your games!</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="remember">Remember me</string>
    <string name="enter">Enter</string>
    <string name="create">Create an account</string>
    <string name="copyright">Developed by DS2M</string>

    <string name="games">Games</string>
    <string name="title_new">New account</string>
    <string name="title_photo">Let\'s we choose a photo?</string>
    <string name="title_data">Data for authentication</string>
    <string name="title_personal_data">Personal data</string>
    <string name="name">What\'s your name?</string>
    <string name="city">What\'s your city?</string>
    <string name="birth_date">Birth date</string>
    <string name="gamer_level">What\'s your gamer level?</string>
    <string name="console">What\'s your favorite console?</string>
    <string name="genre">Genre:</string>
    <string name="fem">Feminine</string>
    <string name="male">Male</string>

    <string name="games_finished">Games Finished</string>
    <string name="currently_playing">Currently Playing</string>
    <string name="age">Age</string>

    <string name="your_games">Your registered games</string>

    <string-array name="consoles">
        <item>PlayStation 5</item>
        <item>PlayStation 4</item>
        <item>PlayStation 3</item>
        <item>XBox One</item>
        <item>XBox 360</item>
        <item>Nintendo Switch</item>
        <item>Super Nintendo</item>
        <item>Nintendo 6</item>
    </string-array>

</resources>